--- a/index.html
+++ b/index.html
@@ -582,5 +582,14 @@
       });
     })();
   </script>
+  <script>
+    if ('serviceWorker' in navigator) {
+      window.addEventListener('load', () => {
+        navigator.serviceWorker.register('./sw.js').catch(() => {
+          /* noop: SW registration can fail on unsupported contexts (e.g., file://) */
+        });
+      });
+    }
+  </script>
 </body>
 </html>
