--- a/index.html
+++ b/index.html
@@ -411,8 +411,10 @@
           </svg>
         </button>
 
-        <form id="lensForm" action="https://lens.google.com/upload?ep=ccm" method="POST" enctype="multipart/form-data" target="_blank" style="display:contents">
+        <!-- Use Google Images upload endpoint to avoid Lens 403 on cross-origin POST -->
+        <form id="lensForm" action="https://www.google.com/searchbyimage/upload" method="POST" enctype="multipart/form-data" target="_blank" style="display:contents">
           <input id="lensFile" type="file" name="encoded_image" accept="image/*" style="display:none" />
+          <input id="lensHl" type="hidden" name="hl" value="en" />
           <button id="lensBtn" class="btn lens" type="button" title="Search with an image" aria-label="Search with an image">
             <svg aria-hidden="true" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round">
               <rect x="3.75" y="3.75" width="16.5" height="16.5" rx="5"/>
@@ -742,7 +744,7 @@
       });
 
       // Lens
-      on(lensBtn, 'click', () => lensFile.click());
+  on(lensBtn, 'click', () => lensFile.click());
       on(lensFile, 'change', () => {
         if (lensFile.files && lensFile.files.length) {
           setTimeout(()=>{ lensForm.submit(); lensForm.reset(); },0);
@@ -1413,6 +1415,9 @@
 
       // Init: attempt to connect to extension; if connected, load bookmarks, else fallback to local
       (async () => {
+        // Localize Google params
+        try { const hl = (navigator.language || 'en').split('-')[0] || 'en'; document.getElementById('lensHl').value = hl; } catch {}
+
         const data = await EXT.connect();
         if (data && Array.isArray(data.items)) {
           state.items = data.items;
