--- a/index.html
+++ b/index.html
@@ -414,8 +414,8 @@
         <!-- Google reverse image search form -->
         <form id="lensForm" action="https://www.google.com/searchbyimage/upload?hl=en" method="POST" enctype="multipart/form-data" target="_blank" style="display:contents">
           <input id="lensFile" type="file" name="encoded_image" accept="image/*" style="display:none" />
-          <input type="hidden" name="image_content" value="" />
-          <input type="hidden" name="filename" value="" />
+          <!-- Required by Google to indicate file upload mode -->
+          <input type="hidden" name="image_url" value="" />
           <button id="lensBtn" class="btn lens" type="button" title="Search with an image" aria-label="Search with an image">
             <svg aria-hidden="true" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.7" stroke-linecap="round" stroke-linejoin="round">
               <rect x="3.75" y="3.75" width="16.5" height="16.5" rx="5"/>
@@ -748,11 +748,8 @@
   on(lensBtn, 'click', () => lensFile.click());
       on(lensFile, 'change', () => {
         if (lensFile.files && lensFile.files.length) {
-          // Populate filename field so Google receives the actual file
-          try {
-            document.querySelector('#lensForm input[name="filename"]').value = lensFile.files[0].name;
-          } catch {}
-          setTimeout(()=>{ lensForm.submit(); lensForm.reset(); },0);
+          // Submit the form directly; Google uses file input and empty image_url
+          setTimeout(() => { lensForm.submit(); lensForm.reset(); }, 0);
         }
       });
 
