--- a/index.html
+++ b/index.html
@@ -296,7 +296,7 @@
       display:flex; align-items:center; gap:8px;
     }
     .folder-view .fv-title{
-      font-size:.95rem; color: var(--ink); font-weight:600; letter-spacing:.02em;
+      font-size:.95rem; color: var(--ink); font-weight: 600; letter-spacing:.02em;
     }
     .folder-view .fv-actions{
       display:flex; align-items:center; gap:6px;
@@ -601,6 +601,22 @@
       const ai = $('#ai');
       const sugg = $('#sugg');
 
+      // Icons for voice button states
+      const VOICE_ICONS = {
+        mic: `
+          <svg aria-hidden="true" width="18" height="18" viewBox="0 0 24 24" fill="none">
+            <rect x="9" y="3" width="6" height="10" rx="3" fill="currentColor"/>
+            <path d="M5 11a7 7 0 0 0 14 0" stroke="currentColor" stroke-width="1.8" stroke-linecap="round"/>
+            <path d="M12 18v3" stroke="currentColor" stroke-width="1.8" stroke-linecap="round"/>
+          </svg>
+        `,
+        stop: `
+          <svg aria-hidden="true" width="18" height="18" viewBox="0 0 24 24" fill="none">
+            <rect x="6" y="6" width="12" height="12" rx="2" fill="currentColor"/>
+          </svg>
+        `
+      };
+
       const isValidUrl = (str) => {
         try {
           // Check if it's already a complete URL
@@ -729,20 +745,60 @@
       });
       on(sugg, 'blur', () => setTimeout(()=>{ sugg.classList.remove('show'); activeIndex=-1; },120));
 
+      // Voice search: toggle start/stop + live transcript
+      let rec = null; let isListening = false;
       on(voice, 'click', () => {
         const SR = window.SpeechRecognition || window.webkitSpeechRecognition;
         if (!SR) { alert("Voice search isn't supported in this browser."); return; }
-        voice.classList.add('recording'); voice.disabled=true;
+
+        // Stop if already listening
+        if (isListening && rec) {
+          try { rec.stop(); } catch {}
+          return;
+        }
+
         try {
-          const rec = new SR(); rec.lang=navigator.language||'en-US'; rec.interimResults=true; rec.maxAlternatives=1;
-          let transcript = q.value;
+          rec = new SR();
+          rec.lang = navigator.language || 'en-US';
+          rec.interimResults = true;
+          rec.maxAlternatives = 1;
+
+          // UI: switch to stop state
+          isListening = true;
+          voice.classList.add('recording');
+          voice.innerHTML = VOICE_ICONS.stop;
+          voice.title = 'Stop';
+          voice.setAttribute('aria-label', 'Stop');
+
           rec.onresult = (ev) => {
-            const res = ev.results[ev.results.length-1][0]?.transcript || '';
-            if (res) transcript = res; q.value = transcript; q.focus(); q.setSelectionRange(q.value.length, q.value.length);
+            try {
+              const text = Array.from(ev.results).map(r => (r[0]?.transcript || '')).join(' ').trim();
+              if (text) {
+                q.value = text;
+                q.focus();
+                const len = q.value.length; q.setSelectionRange(len, len);
+              }
+            } catch {}
           };
-          rec.onerror=()=>{}; rec.onend=()=>{ voice.classList.remove('recording'); voice.disabled=false; };
+
+          rec.onerror = () => {};
+          rec.onend = () => {
+            isListening = false; rec = null;
+            voice.classList.remove('recording');
+            voice.innerHTML = VOICE_ICONS.mic;
+            voice.title = 'Search by voice';
+            voice.setAttribute('aria-label', 'Search by voice');
+          };
+
           rec.start();
-        } catch { voice.classList.remove('recording'); voice.disabled=false; }
+        } catch {
+          // Reset UI on failure
+          isListening = false; rec = null;
+          voice.classList.remove('recording');
+          voice.innerHTML = VOICE_ICONS.mic;
+          voice.title = 'Search by voice';
+          voice.setAttribute('aria-label', 'Search by voice');
+        }
       });
 
       on(lensBtn, 'click', () => {
